--- a/test/.config
+++ b/test/.config
@@ -4911,7 +4911,7 @@ CONFIG_PACKAGE_luci-app-qbittorrent=y
 CONFIG_PACKAGE_luci-app-qbittorrent_static=y
 # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent-simple is not set
-CONFIG_PACKAGE_luci-app-qbittorrent-simple_static=y
+# CONFIG_PACKAGE_luci-app-qbittorrent-simple_static is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent-simple_dynamic is not set
 # CONFIG_PACKAGE_luci-app-qos is not set
 CONFIG_PACKAGE_luci-app-quickstart=y
