--- a/test/.config
+++ b/test/.config
@@ -5370,7 +5370,7 @@ CONFIG_PACKAGE_ffmpeg-remux=y
 # CONFIG_PACKAGE_opentracker is not set
 # CONFIG_PACKAGE_opentracker6 is not set
 CONFIG_PACKAGE_qBittorrent-static=y
-CONFIG_PACKAGE_qbittorrent=y
+# CONFIG_PACKAGE_qbittorrent is not set
 # CONFIG_PACKAGE_rtorrent is not set
 # CONFIG_PACKAGE_rtorrent-rpc is not set
 # CONFIG_PACKAGE_transmission-cli-openssl is not set
