--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ on:
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
-  FEEDS_CONF: test/feeds.conf.default
+  FEEDS_CONF: test/feeds.conf
   CONFIG_FILE: test/.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
